3era Entrega de Proyecto

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hola, soy Lily, soy diseñadora gráfica de profesión, y escritora en entrenamiento.">
+    <meta name="keywords" content="MOM, MAMÁ, BLOG, ABOUT ME, LILY, YOU GOT THIS MOM, TIENDA, MOTHERHOOD, YOU GOT THIS DAD, BEBÉS, BABY, HIJAS, HIJOS, MATERNIDAD">
     <title>About Me - YGTM</title>
     <link rel="icon" type="image/x-icon" href="../images/LogoYGTM.jpeg">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/compilado.css">
 </head>
 <body>
     <header>
@@ -31,11 +33,13 @@
             </div>
           </nav>
     </header>
-    <main class="top-0">
+    <main>
+        <div class="clr-main p-5">
+            <h2 class="text-white fs-1 fw-bolder">About Me</h2>
+        </div>
         <div class="d-flex flex-column flex-lg-row align-content-center justify-content-center pt-5">
             <img class="flex-grow-0 cover align-self-center img-size" src="../images/aboutImg.jpeg" alt="Imagen About Me">
             <div class="p-4 mt-5 align-self-center flex-grow-1">
-                <h2 class="text-white fw-bold mt-5">About Me</h2>
                 <p>¡Hola, bienvenida! soy Lily, soy diseñadora gráfica de profesión y escritora en entrenamiento. Jamás me había atrevido a hacerlo público… hasta que me convertí en mamá. </p>
                 <p>Cuando nació mi primera hija en el 2017, me sentía sola, creía que ser mamá iba a ser como en las películas “lo más hermoso de mi vida” y a las dos horas de estar solos en casa como papás primerizos, queríamos huir jajaja. </p>
                 <p>Abrí mi blog y comencé a escribir en el 2018, tratando de ser una amiga para mi, pensando en lo que a mi me hubiera gustado saber, lo que de verdad pasa por tu mente y no muchas se atreven a decirlo.</p> 
