--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Todas tenemos una historia que contar. Encuentra tu tribu, y únete a nuestra comunidad.">
+    <meta name="keywords" content="MOM, MAMÁ, BLOG, LILY, YOU GOT THIS MOM, TIENDA, MOTHERHOOD, YOU GOT THIS DAD, BEBÉS, BABY, HIJAS, HIJOS, MATERNIDAD, MOM TALES, FIND YOUR TRIBE">
     <title>Blog - YGTM</title>
     <link rel="icon" type="image/x-icon" href="../images/LogoYGTM.jpeg">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/compilado.css">
 </head>
 <body>
     <header>
@@ -33,61 +35,66 @@
     </header>
     <main>
         <section>
-            <h2 class="fw-bold text-white">Blog</h2>
-            <div class="grid-layout mb-3 mt-5">
-                <img class="grid-layout__img blog__img hover" src="../images/blogImg1.png" alt="Fotografía de la entrada al Blog">
-                <h3 class="hover grid-center m-3">Entrada de Blog</h3>
-                <div>
-                    <p class="m-0 fst-italic">Autora</p>
-                    <p class="m-0 fst-italic">Fecha</p>
-                </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
+            <div class="clr-main p-5">
+                <h2 class="fw-bolder fs-1 text-white">Blog</h2>
             </div>
-            <div class="grid-layout reverse mb-5 mt-5">
-                 <img class="grid-layout__img blog__img hover" src="../images/blogEntryImg.png" alt="Fotografía de la entrada al Blog">
-                 <h3 class="hover grid-center m-3">Entrada de Blog</h3>
-                 <div>
-                    <p class="m-0 fst-italic">Autora</p>
-                    <p class="m-0 fst-italic">Fecha</p>
-                 </div>
-                 <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
-             </div> 
-         </section>
+            <div class="grid-layout m-2 mb-3 pb-4 mt-5 clr-main">
+                <img class="grid-layout__img blog__img hover" src="../images/blogImg1.png" alt="Fotografía de la entrada al Blog">
+                <h3 class="hover grid-center m-3 fw-bold">Luto en el posparto</h3>
+                <div>
+                    <p class="m-0 fst-italic">Lily</p>
+                    <p class="m-0 fst-italic">octubre 20, 2021</p>
+                </div>
+                <p>Cuando me embaracé, tenía la maravillosa idea de que estaría feliz con mi bebé y mi mamá enseñándome todo lo que sabía sobre maternidad, creo que es cuando vemos a mamá nuevamente como la mejor amiga que pudiera existir y no queremos despegarnos de ella porque todo es nuevo para nosotras [...]</p>
+            </div>
+            <div class="grid-layout reverse m-2 mb-3 pb-4 mt-5 clr-main">
+                <img class="grid-layout__img blog__img hover" src="../images/blogEntryImg.png" alt="Fotografía de la entrada al Blog">
+                <h3 class="hover grid-center m-3 fw-bold">Roadtrip con Toddlers</h3>
+                <div>
+                    <p class="m-0 fst-italic fw-lighter">Lily</p>
+                    <p class="m-0 fst-italic fw-lighter">junio 30, 2021</p>
+                </div>
+                <p class="blogPreview">¡Hola moms! Estoy super contenta de poder volver y regresar a escribir. Quiero compartirles en este post algunos tips para viajar con sus hijos, sobre todo en carretera [...]</p>
+            </div> 
+        </section>
         
         <div class="container-fluid">
             <div class="row">
                 <div class="bg-momTales"></div>
                 <div class="col-12 mb-4">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, provident dolore pariatur, nobis architecto aliquid nesciunt labore eveniet, eaque deserunt eius illo! Labore nihil deserunt assumenda, temporibus debitis necessitatibus rerum.</p>
+                    <p>Después de comenzar a escribir mis experiencias como mamá primeriza, me di cuenta que muchas mamás se relacionaban conmigo, pero había muchas más que querían contar su experiencia, querían sentirse escuchadas y querían ayudar a otras.
+                        No sólo mi forma de vivir la maternidad es la única, así que decidí abrir el espacio a muchas mamás que quieren contar su historia. Todas y cada una de ellas han vivido por diferentes situaciones y eso las hace únicas.
+                        Gracias a sus diferentes perspectivas, pudimos lograr una comunidad más grande, en donde muchas mamás se sienten acompañadas e identificadas.
+                        Cada semana hay una mamá nueva que escribe para esta sección. No dejes de leerlas, comentar y compartir. Todo esto nos ayuda a crecer mas como comunidad.</p>
                 </div>
             </div>
         </div>
-        <div class="grid-layout mb-3 mt-5">
+        <div class="grid-layout m-2 mb-3 pb-4 mt-5 clr-main">
             <img class="grid-layout__img blog__img hover" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
-            <h3 class="hover grid-center m-3">Entrada de Blog</h3>
+            <h3 class="hover grid-center m-3 fw-bold">Conocí la alteración de la integración sensorial gracias a mi hija</h3>
             <div>
-                <p class="m-0 fst-italic">Autora</p>
-                <p class="m-0 fst-italic">Fecha</p>
+                <p class="m-0 fst-italic fw-lighter">Rosi</p>
+                <p class="m-0 fst-italic fw-lighter">septiembre 27, 2021</p>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
+            <p>¡Hola! mi nombre es Rosi, tengo 31 años, soy mamá de una niña de 2 años, María y estamos en la espera de nuestra segunda niña, Inés. Me casé hace 3 años con el amor de mi vida y juntos hemos realizado nuestra familia que siempre soñamos [...]</p>
         </div>
-        <div class="grid-layout reverse mb-3 mt-5">
+        <div class="grid-layout reverse m-2 mb-3 pb-4 mt-5 clr-main">
              <img class="grid-layout__img blog__img hover" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
-             <h3 class="hover grid-center m-3">Entrada de Blog</h3>
+             <h3 class="hover grid-center m-3 fw-bold">Maternidad Imperfecta</h3>
              <div>
-                <p class="m-0 fst-italic">Autora</p>
-                <p class="m-0 fst-italic">Fecha</p>
+                <p class="m-0 fst-italic fw-lighter">Andrea</p>
+                <p class="m-0 fst-italic fw-lighter">agosto 31, 2021</p>
              </div>
-             <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
+             <p class="blogPreview">Hola, son Andrea, tengo 3 años y 3 meses de ser mamá y de que la maternidad me haya cambiado por completo, de maneras que uno […]</p>
          </div> 
-         <div class="grid-layout mb-5 mt-5">
+         <div class="grid-layout m-2 mb-5 pb-4 mt-5 clr-main">
             <img class="grid-layout__img blog__img hover" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
-            <h3 class="hover grid-center m-3">Entrada de Blog</h3>
+            <h3 class="hover grid-center m-3 fw-bold">Baby Blues: La oportunidad para conocernos más</h3>
             <div>
-                <p class="m-0 fst-italic">Autora</p>
-                <p class="m-0 fst-italic">Fecha</p>
+                <p class="m-0 fst-italic fw-lighter">Cecy</p>
+                <p class="m-0 fst-italic fw-lighter">agosto 18, 2021</p>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
+            <p>Acababa de tener a mi primera hija Valentina y acababa de pasar por esa etapa, el baby blues, y platicaba exactamente lo que estaba sintiendo. Me di cuenta que muchas sienten culpa de sentirlo pues no saben que es esperado que pase en esos primeros días, incluso hay veces qué pasa por semanas [...]</p>
         </div>
     </main>
     <footer>
