--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - YGTM</title>
     <link rel="icon" type="image/x-icon" href="../images/LogoYGTM.jpeg">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/compilado.css">
 </head>
 <body>
     <header>
@@ -32,31 +32,34 @@
           </nav>
     </header>
     <main>
+        <div class="p-5 clr-main">
+            <h2 class="fw-bolder fs-1 text-white">Contacto</h2>
+        </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="bg-contacto"></div>
             </div>
         </div>
-        <section class="mainSection">
+        <section class="m-5">
             <div class="d-flex flex-column flex-lg-row align-items-lg-center justify-content-center">
                 <div class="basis">
-                    <h3 class="mb-4">Me encantaría saber de ti</h3>
-                    <p class="m-0">¿Te gustaría escribir en mi blog? ¿Eres empresa y te gustaría colaborar? Escríbeme y pronto nos pondremos en contacto.</p>
+                    <h3 class="mb-4 fw-bold">Me encantaría saber de ti</h3>
+                    <p class="m-0 p-5">¿Te gustaría escribir en mi blog? ¿Eres empresa y te gustaría colaborar? Escríbeme y pronto nos pondremos en contacto.</p>
                 </div>
                 <form class="m-5 basis">
                     <div class="form-group">
-                        <label for="name">Nombre</label>
+                        <label for="name" class="mt-4 p-1">Nombre</label>
                         <input type="text" class="form-control" id="name" placeholder="Lily de You Got This Mom">
                     </div>
                     <div class="form-group">
-                        <label for="email">Correo Electrónico</label>
+                        <label for="email" class="mt-4 p-1">Correo Electrónico</label>
                         <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com">
                     </div>
                     <div class="form-group">
-                        <label for="message">Mensaje</label>
+                        <label for="message" class="mt-4 p-1">Mensaje</label>
                         <textarea class="form-control" id="message" rows="5"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-light mt-3">Enviar</button>
+                    <button type="submit" class="btn-lg btn-light mt-4">Enviar</button>
                 </form>
             </div>
             
