--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - YGTM</title>
     <link rel="icon" type="image/x-icon" href="../images/LogoYGTM.jpeg">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/compilado.css">
 </head>
 <body>
     <header>
@@ -32,54 +32,56 @@
           </nav>
     </header>
     <main>
-        <h2 class="mb-4">Productos</h2>
-        <section class="grid-cards mb-5">
-            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+        <div class="clr-main p-5">
+            <h2 class=" fw-bold fs-1 text-white">Productos</h2>
+        </div>
+        <section class="grid-cards m-5">
+            <div class="card hover-alt shadow-lg clr-secondary" style="width: 18rem;">
                 <img class="card-img-top max cover" src="../images/productosHoodie.jpg" alt="Hoodie You Got This Mom">
                 <div class="card-body">
-                <h5 class="card-title">You Got This Mom - Hoodie Negra</h5>
-                <p class="card-text">$500.00</p>
-                <a href="#" class="btn btn-secondary">Ver más</a>
+                <h5 class="card-title fw-bold text-white">You Got This Mom - Hoodie Negra</h5>
+                <p class="card-text text-white">$500.00</p>
+                <a href="#" class="btn btn-light">Ver más</a>
                 </div>
             </div>
-            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+            <div class="card hover-alt shadow-lg clr-secondary" style="width: 18rem;">
                 <img class="card-img-top max cover" src="../images/productosTarro3.jpeg" alt="Hoodie You Got This Mom">
                 <div class="card-body">
-                <h5 class="card-title">It's a Good Day to have a Good Day - Taza</h5>
-                <p class="card-text">$350.00</p>
-                <a href="#" class="btn btn-secondary">Ver más</a>
+                <h5 class="card-title fw-bold text-white">It's a Good Day to have a Good Day - Taza</h5>
+                <p class="card-text text-white">$350.00</p>
+                <a href="#" class="btn btn-light">Ver más</a>
                 </div>
             </div>
-            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+            <div class="card hover-alt shadow-lg clr-secondary" style="width: 18rem;">
                 <img class="card-img-top max cover" src="../images/productosMotherhood.png" alt="Hoodie You Got This Mom">
                 <div class="card-body">
-                <h5 class="card-title">Motherhood is Powerful - T-shirt</h5>
-                <p class="card-text">$300.00</p>
-                <a href="#" class="btn btn-secondary">Ver más</a>
+                <h5 class="card-title fw-bold text-white">Motherhood is Powerful - T-shirt</h5>
+                <p class="card-text text-white">$300.00</p>
+                <a href="#" class="btn btn-light">Ver más</a>
                 </div>
             </div>
-            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+            <div class="card hover-alt shadow-lg clr-secondary" style="width: 18rem;">
                 <img class="card-img-top max cover" src="../images/productosYouGotThisMom.png" alt="Hoodie You Got This Mom">
                 <div class="card-body">
-                <h5 class="card-title">You Got This Mom - T-shirt</h5>
-                <p class="card-text">$300.00</p>
-                <a href="#" class="btn btn-secondary">Ver más</a>
+                <h5 class="card-title fw-bold text-white">You Got This Mom - T-shirt</h5>
+                <p class="card-text text-white">$300.00</p>
+                <a href="#" class="btn btn-light">Ver más</a>
                 </div>
             </div>
-            <div class="card hover-alt shadow-lg" style="width: 18rem;">
-                <img class="card-img-top max cover" src="../images/productosTazaYouGotThisMom.png" alt="Hoodie You Got This Mom">
+            <div class="card hover-alt shadow-lg clr-secondary" style="width: 18rem;">
+                <img class="card-img-top max cover clr-secondary" src="../images/productosTazaYouGotThisMom.png" alt="Hoodie You Got This Mom">
                 <div class="card-body">
-                <h5 class="card-title">You Got This Mom - Taza</h5>
-                <p class="card-text">$400.00</p>
-                <a href="#" class="btn btn-secondary">Ver más</a>
+                <h5 class="card-title fw-bold text-white">You Got This Mom - Taza</h5>
+                <p class="card-text text-white">$400.00</p>
+                <a href="#" class="btn btn-light">Ver más</a>
                 </div>
             </div>
-            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+            <div class="card hover-alt shadow-lg clr-secondary" style="width: 18rem;">
                 <img class="card-img-top max cover" src="../images/productosTazaYouGotThisDad.png" alt="Hoodie You Got This Mom">
                 <div class="card-body">
-                <h5 class="card-title">You Got This Dad - Taza</h5>
-                <p class="card-text">$400.00</p>
-                <a href="#" class="btn btn-secondary">Ver más</a>
+                <h5 class="card-title fw-bold text-white">You Got This Dad - Taza</h5>
+                <p class="card-text text-white">$400.00</p>
+                <a href="#" class="btn btn-light">Ver más</a>
                 </div>
             </div>
         </section>
