Commit Final - Listo para cliente

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -57,12 +57,11 @@
                 <p class="blogPreview">¡Hola moms! Estoy super contenta de poder volver y regresar a escribir. Quiero compartirles en este post algunos tips para viajar con sus hijos, sobre todo en carretera [...]</p>
             </div> 
         </section>
-        
+        <div class="bg-momTales"></div>
         <div class="container-fluid">
             <div class="row">
-                <div class="bg-momTales"></div>
                 <div class="col-12 mb-4">
-                    <p>Después de comenzar a escribir mis experiencias como mamá primeriza, me di cuenta que muchas mamás se relacionaban conmigo, pero había muchas más que querían contar su experiencia, querían sentirse escuchadas y querían ayudar a otras.
+                    <p class="fs-5 m-3">Después de comenzar a escribir mis experiencias como mamá primeriza, me di cuenta que muchas mamás se relacionaban conmigo, pero había muchas más que querían contar su experiencia, querían sentirse escuchadas y querían ayudar a otras.
                         No sólo mi forma de vivir la maternidad es la única, así que decidí abrir el espacio a muchas mamás que quieren contar su historia. Todas y cada una de ellas han vivido por diferentes situaciones y eso las hace únicas.
                         Gracias a sus diferentes perspectivas, pudimos lograr una comunidad más grande, en donde muchas mamás se sienten acompañadas e identificadas.
                         Cada semana hay una mamá nueva que escribe para esta sección. No dejes de leerlas, comentar y compartir. Todo esto nos ayuda a crecer mas como comunidad.</p>
