--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¡Tenemos tienda! Entra aquí para ver la selección de productos de You Got This Mom para tí.">
+    <meta name="keywords" content="MOM, MAMÁ, BLOG, LILY, YOU GOT THIS MOM, TIENDA, MOTHERHOOD, YOU GOT THIS DAD, BEBÉS, BABY, HIJAS, HIJOS, MATERNIDAD, SHOP, STORE, FIND YOUR TRIBE">
     <title>Productos - YGTM</title>
     <link rel="icon" type="image/x-icon" href="../images/LogoYGTM.jpeg">
     <link rel="stylesheet" href="../css/compilado.css">
@@ -35,7 +37,7 @@
         <div class="clr-main p-5">
             <h2 class=" fw-bold fs-1 text-white">Productos</h2>
         </div>
-        <section class="grid-cards m-5">
+        <section class="grid-cards m-5 p-5">
             <div class="card hover-alt shadow-lg clr-secondary" style="width: 18rem;">
                 <img class="card-img-top max cover" src="../images/productosHoodie.jpg" alt="Hoodie You Got This Mom">
                 <div class="card-body">
