--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
+                <div class="navbar-nav nav-clr">
                   <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                   <a class="nav-link" href="pages/aboutMe.html">About Me</a>
                   <a class="nav-link" href="pages/blog.html">Blog</a>
