--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¡Quiero saber de ti! Escríbeme un mensaje y te responderé tan pronto como pueda.">
+    <meta name="keywords" content="MOM, MAMÁ, BLOG, LILY, YOU GOT THIS MOM, TIENDA, MOTHERHOOD, YOU GOT THIS DAD, BEBÉS, BABY, HIJAS, HIJOS, MATERNIDAD, CONTACTO, MENSAJE">
     <title>Contacto - YGTM</title>
     <link rel="icon" type="image/x-icon" href="../images/LogoYGTM.jpeg">
     <link rel="stylesheet" href="../css/compilado.css">
@@ -40,8 +42,8 @@
                 <div class="bg-contacto"></div>
             </div>
         </div>
-        <section class="m-5">
-            <div class="d-flex flex-column flex-lg-row align-items-lg-center justify-content-center">
+        <section class="m-1">
+            <div class="d-flex flex-column flex-lg-row align-items-lg-center justify-content-center m-0 p-0">
                 <div class="basis">
                     <h3 class="mb-4 fw-bold">Me encantaría saber de ti</h3>
                     <p class="m-0 p-5">¿Te gustaría escribir en mi blog? ¿Eres empresa y te gustaría colaborar? Escríbeme y pronto nos pondremos en contacto.</p>
