Revisiones finales - centrar cards en productos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -37,7 +37,7 @@
         <div class="clr-main p-5">
             <h2 class=" fw-bold fs-1 text-white">Productos</h2>
         </div>
-        <section class="grid-cards m-5 p-5">
+        <section class="grid-cards mt-5 mb-5 gap-5">
             <div class="card hover-alt shadow-lg clr-secondary" style="width: 18rem;">
                 <img class="card-img-top max cover" src="../images/productosHoodie.jpg" alt="Hoodie You Got This Mom">
                 <div class="card-body">
